# mpl_bsic

./: .coverage  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: poetry_test.yml  test.yml  tests.yml
debug/: debug.py  debug_excel_styling.py  debug_plot_trade.py  debugconf.py  test_notebook.ipynb
debug/data/: test.xlsx
doc/source/: conf.py  index.rst
doc/source/_functions/: mpl_bsic.apply_bsic_logo.rst  mpl_bsic.apply_bsic_style.rst  mpl_bsic.check_figsize.rst  mpl_bsic.preprocess_dataframe.rst
doc/source/_templates/: custom-function-template.rst
docs/source/: conf.py  index.rst  requirements.txt
docs/source/_functions/: mpl_bsic.apply_bsic_logo.rst  mpl_bsic.apply_bsic_style.rst  mpl_bsic.check_figsize.rst  mpl_bsic.df_to_excel.rst  mpl_bsic.export_figure.rst  mpl_bsic.format_timeseries_axis.rst  mpl_bsic.plot_trade.rst  mpl_bsic.style_excel_file.rst
mpl_bsic/: __init__.py  add_title_subtitle.py  apply_bsic_logo.py  apply_bsic_style.py  check_figsize.py  constants.py  export_figure.py  format_timeseries_axis.py  plot_trade.py  preprocess_dataframe.py  style_excel.py
mpl_bsic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  debug.py  debug_plot_trade.py  performance_tester.test.py  plot_trade.test.py  plotter1.test.py  plotter2.test.py  plotter3.test.py  preprocessdf.test.py  test.py  test_figsize.py  test_logo.py  test_setup.py  test_style.py  tools.py
tests/data/: trade.xlsx  usyieldsdata.csv
utils/: add_fonts.py  logger.py  run_animations.py  set_animations.py
