[tool.poetry]
name = "mpl_bsic"
description = "BSIC Plotting Library"
authors = ["Andrea Franceschini <andrea.franceschini2@studbocconi.it>"]
readme = "README.md"
version = "0.0.0"    
packages = [{include = "mpl_bsic"}, {include = "utils"}]
# testpypi v1.2.1

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = "^3.7"
numpy = "^1.26"
pandas = "^2.1"

[tool.poetry.group.testing]
optional = true

[tool.poetry.group.testing.dependencies]
pytest = ">=7.0"
flaky = ">=3.6"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"
format-jinja = """
    {%- if distance == 0 -%}
        {{- base -}}
    {%- else -%}
        {{- base }}.dev{{ distance }}+g{{commit}}
    {%- endif -%}
"""
format-jinja-imports = [{ module = "datetime", item = "datetime" }]

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
filterwarnings = [
    # "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    # 'ignore:function ham\(\) is deprecated:DeprecationWarning',
]

[tool.commitizen]
version = "1.2.2"
update_changelog_on_bump = true
